tests/ui/lifetimes/elided-lifetime-in-path-details.tied.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:15:5
   |
LL | fn top_level_to_nested(v: &u8) ->
   |                           - the lifetime comes from here
LL |
LL |     ContainsLifetime
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> $DIR/elided-lifetime-in-path-details.rs:3:24
   |
LL | #![cfg_attr(tied, deny(elided_lifetimes_in_paths_tied))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:24:8
   |
LL |     v: ContainsLifetime,
   |        ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     v: ContainsLifetime<'_>,
   |                        ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:34:8
   |
LL |     v: ContainsLifetime,
   |        ^^^^^^^^^^^^^^^^ expected lifetime parameter
...
LL | ) -> ContainsLifetime
   |      ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     v: ContainsLifetime<'_>,
   |                        ++++
help: indicate the anonymous lifetime
   |
LL | ) -> ContainsLifetime<'_>
   |                      ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:53:5
   |
LL |     ContainsLifetime
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:120:5
   |
LL | fn top_level_to_multiple_nested(v: &u8) -> (
   |                                    - the lifetime comes from here
LL |
LL |     ContainsLifetime,
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
...
LL |     ContainsLifetime,
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>,
   |                     ++++
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>,
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:141:9
   |
LL |         v: &u8,
   |            - the lifetime comes from here
...
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:150:12
   |
LL |         v: ContainsLifetime,
   |            ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         v: ContainsLifetime<'_>,
   |                            ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:160:12
   |
LL |         v: ContainsLifetime,
   |            ^^^^^^^^^^^^^^^^ expected lifetime parameter
...
LL |     ) -> ContainsLifetime
   |          ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         v: ContainsLifetime<'_>,
   |                            ++++
help: indicate the anonymous lifetime
   |
LL |     ) -> ContainsLifetime<'_>
   |                          ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:179:9
   |
LL |         &self,
   |         - the lifetime comes from here
...
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:192:9
   |
LL |         &self,
   |         - the lifetime comes from here
...
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:206:10
   |
LL |         &self,
   |         - the lifetime comes from here
...
LL |     ) -> ContainsLifetime
   |          ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ) -> ContainsLifetime<'_>
   |                          ++++

error: aborting due to 11 previous errors

